# scream

./: .gitmodules  run_scream.syrah_ne30_rce_reduced_planet_theta_dycore_change_SST.csh=a_run_link  run_scream.syrah_ne30_rce_reduced_planet_theta_dycore_change_SST_2.csh  run_scream.syrah_ne30_rce_reduced_planet_theta_dycore_change_SST_2.csh=a_run_link  run_scream.syrah_ne30_rce_reduced_planet_theta_dycore_change_SST_test.csh  run_scream.syrah_ne30_rce_reduced_planet_theta_dycore_change_SST_test.csh=a_run_link
cime/config/e3sm/: config_files.xml
cime/config/e3sm/machines/: config_machines.xml
cime/scripts/: my_test_script.sh
cime_config/machines/: config_compilers.xml  config_machines.xml
components/cam/bld/namelist_files/: namelist_defaults_cam.xml  namelist_definition.xml
components/cam/cime_config/: config_component.xml  config_compsets.xml
components/cam/src/control/: runtime_opts.F90  scamMod.F90
components/cmake/: common_setup.cmake
components/eam/src/control/: scamMod.F90
components/elm/src/main/: ncdio_pio.F90.in
components/homme/src/preqx/: element_state.F90
components/homme/src/preqx_acc/: element_state.F90
components/homme/src/preqx_kokkos/: element_state.F90
components/homme/src/share/: prim_driver_base.F90
components/scream/: CMakeLists.txt
components/scream/cmake/: scorpio.cmake
components/scream/cmake/machine-files/: lassen.cmake  quartz.cmake  syrah.cmake
components/scream/data/: p3_convergence.nc  scream_input.yaml  theta-nmax.nl
components/scream/src/control/: atmosphere_driver.cpp  atmosphere_driver.hpp  surface_coupling.cpp
components/scream/src/interface/: CMakeLists.txt  atm_comp_mct.F90  dead_mod.F90  examplePio.f90  spmd_utils.F90  units.F90
components/scream/src/mct_coupling/: CMakeLists.txt  atm_comp_mct.F90  (+7 more)
components/scream/tests/: CMakeLists.txt
components/scream/tests/uncoupled/: CMakeLists.txt
components/scream/tests/uncoupled/homme/: CMakeLists.txt
components/scream/tests/uncoupled/p3/: p3_standalone_output.yaml
components/scream/tests/uncoupled/shoc/: CMakeLists.txt  input.yaml  shoc_standalone_ne4_pg2.nc
(+129 files in other folders)
